k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-ms-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-ms-node
  template:
    metadata:
      labels:
        app: crud-ms-node
    spec:
      containers:
        - name: crud-ms-node
          image: crud-ms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
