k8s/read-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: read-ms-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: read-ms-node
  template:
    metadata:
      labels:
        app: read-ms-node
    spec:
      containers:
        - name: read-ms-node
          image: read-ms:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
