k8s/read-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: read-ms-node
spec:
  type: ClusterIP
  selector:
    app: read-ms-node
  ports:
    - port: 80
      targetPort: 3001
