k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-ms-node
spec:
  type: ClusterIP
  selector:
    app: crud-ms-node
  ports:
    - port: 80
      targetPort: 3000
